[project]
name = "epic-gemini"
version = "0.1.0"
description = "Epic Games free-game claimer scaffold with optional Gemini CAPTCHA handoff"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.3.0",
    "selenium>=4.17.2",
    "undetected-chromedriver>=3.5.5",
]

[project.scripts]
epic-gemini = "epic_gemini.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "SIM", "ARG", "C4"]
ignore = ["ARG001"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
